# detect_faces_test

./: CMakeLists.txt  README.md  detector.cc  detector.h  requirements.txt  simple_detect.cc  test.cc
